--- a/TwitterSenti.bib
+++ b/TwitterSenti.bib
@@ -8,14 +8,7 @@
   author =	 {Chih-Chung Chang and Chih-Jen Lin},
   title =	 {{LIBSVM}: a library for support vector machines},
   year =	 {2001},
-  note =	 {Software available at \url{http://www.csie.ntu.edu.tw/~cjlin/libsvm}}
-}
-@article{lin2003study,
-  title={{A study on sigmoid kernels for SVM and the training of non-PSD kernels by SMO-type methods}},
-  author={Lin, H.T. and Lin, C.J.},
-  journal={submitted to Neural Computation},
-  year={2003},
-  publisher={Citeseer}
+  note =	 {Software available at http://www.csie.ntu.edu.tw/~cjlin/libsvm}
 }
 @article{keerthi2003asymptotic,
   title={{Asymptotic behaviors of support vector machines with Gaussian kernel}},
@@ -27,4 +20,14 @@
   year={2003},
   publisher={MIT Press}
 }
-
+@article{go-twitter,
+  title={{Twitter Sentiment Classification using Distant Supervision}},
+  author={Go, A. and Bhayani, R. and Huang, L.}
+}
+@conference{read2005using,
+  title={{Using emoticons to reduce dependency in machine learning techniques for sentiment classification}},
+  author={Read, J.},
+  booktitle={Student Research Workshop},
+  pages={43},
+  year={2005}
+}
