--- a/trunk/TwitterSenti.bib
+++ b/trunk/TwitterSenti.bib
@@ -1,9 +1,41 @@
+@article{pang2008opinion,
+  title={{Opinion mining and sentiment analysis}},
+  author={Pang, B. and Lee, L.},
+  journal={Foundations and Trends in Information Retrieval},
+  volume={2},
+  number={1-2},
+  pages={1--135},
+  year={2008},
+  publisher={Now Publishers Inc.}
+}
+@article{manning-introduction,
+  title={{An introduction to information retrieval}},
+  author={Manning, C.D. and Raghavan, P. and Sch{\\"u}tze, H.}
+}
+@tool{mallet,
+title={{  "MALLET: A Machine Learning for Language Toolkit."}},
+author={McCallum, Andrew Kachites.}
+}
 @misc{hsu2003practical,
   title={{A practical guide to support vector classification}},
   author={Hsu, C.W. and Chang, C.C. and Lin, C.J. and others},
   year={2003},
   publisher={Citeseer}
 }
+@conference{nigam1999using,
+  title={{Using maximum entropy for text classification}},
+  author={Nigam, K. and Lafferty, J. and McCallum, A.},
+  booktitle={IJCAI-99 workshop on machine learning for information filtering},
+  volume={1},
+  pages={61--67},
+  year={1999},
+  organization={Citeseer}
+}
+@article{parikh,
+  title={{Sentiment Analysis of User-Generated Twitter Updates using Various Classfication Techniques}},
+  author={Parikh, R. and Movassate, M.}
+}
+
 @Manual{CC01a,
   author =	 {Chih-Chung Chang and Chih-Jen Lin},
   title =	 {{LIBSVM}: a library for support vector machines},
